[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-triage-env"
version = "1.0.0"
description = "SRE Incident Triage — OpenEnv environment"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.30.*",
    "pydantic==2.*",
    "openai>=2.7.2",
    "httpx>=0.27",
    "requests==2.*",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]
